<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_button_black1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Select help reason :"
            />

        <RadioGroup android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text1">

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text2"
                >

            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio3"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text3">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio4"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text4">
            </RadioButton>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio5"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text5">
            </RadioButton>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio6"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text6">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio7"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text7">
            </RadioButton>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio8"
                android:buttonTint="@color/green"
                android:text="@string/user_help_text8">
            </RadioButton>


        </RadioGroup>


        <EditText
            android:id="@+id/edt_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:hint="Write your help text"
            />


        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="SUBMIT"
            />



    </LinearLayout>




</LinearLayout>