<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/toolbar"
        android:src="@mipmap/logo_home"
        />


    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_mid"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/msg1"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:id="@+id/ll_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        >

        <EditText
            android:id="@+id/input_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_otp"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:maxLength="6"
            android:background="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            />


    </LinearLayout>


    <Button
        android:id="@+id/action_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_mid"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/green"
        />



    <TextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_verify"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:gravity="center"
        android:text="@string/resend_otp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/tv_show_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_verify"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        />






</RelativeLayout>