<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_reg_bg">



    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/logo_home"
        />

    <ImageView
        android:id="@+id/img_car"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_logo"
        android:src="@mipmap/login_image_use"
        />


    <!--<android.support.v7.widget.CardView
        android:id="@+id/cv_mid"
        android:background="@color/white"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="5dp"
        android:layout_centerInParent="true"
        >-->

        <LinearLayout
            android:id="@+id/ll_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_centerInParent="true"

            >


            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="10dp"
                android:hint="@string/hint_enter_mobile"
                android:gravity="start"
                android:maxLength="10"
                android:background="@drawable/border_with_white"
                />




            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:hint="@string/hint_enter_password"
                android:gravity="start"
                android:background="@drawable/border_with_white"
                />


        </LinearLayout>

<!--</android.support.v7.widget.CardView>-->









    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_mid"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:text="@string/forgot_password"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/action_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:background="@color/green"
            />


    </RelativeLayout>




</RelativeLayout>